# license-plate-recognition

./: Dockerfile  LICENSE  README.md  annotations.xml  anpr.py  docker-compose.yml  helpers.py  main.py  pyproject.toml  requirements.txt
scripts/: prepare_data_for_yolo.py  test_plate_recognition.py
src/anpr/: classical.py
src/api/: main.py
src/database/: db.py
src/ml/: detector.py  ocr.py  train_detector.py
src/utils/: helpers.py
